responsive essue fix for all device

--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,5 @@
 div::-webkit-scrollbar {
   display: none;
 }
+@import 'react-date-range/dist/styles.css';
+@import 'react-date-range/dist/theme/default.css';
